# CW_forest_segmentation

./: EDA.ipynb  pyproject.toml
data/: TIF_original_image_with_mask&geodata.tif
