[project]
name = "cw-forest-segmentation"
version = "0.1.0"
description = ""
authors = [
    {name = "AlexeyChechetko",email = "chechetko-2003@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch (==2.7.0)",
    "notebook (>=7.4.2,<8.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "tqdm (>=4.67.1,<5.0.0)",
    "rasterio (>=1.4.3,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
